--- a/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -275,21 +275,35 @@
 	pinctrl-0 = <&spi0_pins &spi0_cs_pins>;
 	cs-gpios = <&gpio 8 1>, <&gpio 7 1>;
 
-	spidev0: spidev@0{
-		compatible = "spidev";
-		reg = <0>;	/* CE0 */
-		#address-cells = <1>;
-		#size-cells = <0>;
-		spi-max-frequency = <125000000>;
-	};
+	status = "okay";
+        #address-cells = <1>;
+        #size-cells = <0>;
+/*
+        spidev0: spidev@0{
+                compatible = "spidev";
+                reg = <0>;
+                #address-cells = <1>;
+                #size-cells = <0>;
+                spi-max-frequency = <125000000>;
+                status = "disabled";
+        };
 
-	spidev1: spidev@1{
-		compatible = "spidev";
-		reg = <1>;	/* CE1 */
-		#address-cells = <1>;
-		#size-cells = <0>;
-		spi-max-frequency = <125000000>;
-	};
+        spidev1: spidev@1{
+                compatible = "spidev";
+                reg = <1>;
+                #address-cells = <1>;
+                #size-cells = <0>;
+                spi-max-frequency = <125000000>;
+                status = "disabled";
+        };
+*/
+        st7789v: st7789v@0 {
+                compatible = "sitronix,st7789v";
+                reg = <0>;
+                spi-max-frequency = <54000000>;
+                status = "okay";
+        };
+
 };
 
 &gpio {
