--- a/arch/arm/configs/bcm2711_defconfig
+++ b/arch/arm/configs/bcm2711_defconfig
@@ -689,11 +689,12 @@ CONFIG_I2C_GPIO=m
 CONFIG_I2C_ROBOTFUZZ_OSIF=m
 CONFIG_I2C_TINY_USB=m
 CONFIG_SPI=y
-CONFIG_SPI_BCM2835=m
+CONFIG_SPI_BCM2835=y
 CONFIG_SPI_BCM2835AUX=m
 CONFIG_SPI_GPIO=m
 CONFIG_SPI_SPIDEV=m
 CONFIG_SPI_SLAVE=y
+CONFIG_ST7789V_SPILCD=y
 CONFIG_PPS=m
 CONFIG_PPS_CLIENT_LDISC=m
 CONFIG_PPS_CLIENT_GPIO=m
